<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_map_location">Map Location</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_key">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_default">tehran, iran</string>

    <string name="pref_units_key">units</string>
    <string name="pref_units_title">Temperature Units</string>
    <string name="pref_units_dialog_title">Pick your units:</string>

    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_metric_label">Metric</string>
    <string name="pref_units_imperial_label">Imperial</string>

    <string name="pref_enable_notification_key">enable_notifications</string>
    <string name="pref_enable_notification_title">Notifications</string>

    <string name="pref_enable_notifications_key">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" >true</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="format_temperature">
        <xliff:g id="temp">%1d</xliff:g>\u00B0
    </string>

    <string name="format_humidity">
        Humidity: <xliff:g id="humidity">%1$d</xliff:g> %%
    </string>

    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$d</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$d</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_pressure">
        Pressure: <xliff:g id="pressure">%1d</xliff:g> hPa
    </string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">app.com.example.android.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <string name ="no_weather_information_available">No weather information available</string>
    <string name="no_weather_information_available_no_network">
        No weather information available.\n The network is not available to fetch weather data.
    </string>
</resources>