<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:summary="@string/pref_location_default"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"/>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:summary="@string/pref_units_metric"
        android:dialogTitle="@string/pref_units_dialog_title"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_entry_values"
        android:defaultValue="@string/pref_units_metric"/>

    <CheckBoxPreference
        android:key="@string/pref_enable_notifications_key"
        android:title="@string/pref_enable_notifications_label"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default"/>

</PreferenceScreen>